--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@ h2 {
 .score-board {
 	width: 50vw;
 	min-height: 3em;
-	background: green;
 	margin: 2vh auto;
 	border: 1px solid black;
+	display: grid;
+	grid-auto-flow: column;
+	justify-items: center;
 }
 
 .game-board-container {
@@ -66,9 +68,21 @@ h2 {
 	margin: 0 auto;
 }
 
-.set-difficulty-button,
-.reset-button {
-	margin: 2vh 1vh;
+.button-container {
+	width: 20vh;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
+	margin: 0 auto;
+}
+
+.button-container>li {
+	list-style-type: none;
+	background: yellow;
+	box-shadow: inset 0 0 3vh rgb(104, 93, 0);
+	border-radius: 10%;
+	margin: .5vh;
+	padding: .25vh;
 }
 
 .green {
