--- a/style.css
+++ b/style.css
@@ -3,19 +3,34 @@ h2 {
 	text-align: center;
 }
 
+.hidden {
+	display: none;
+}
+
 .score-board {
 	width: 50vw;
 	min-height: 3em;
-	margin: 2vh auto;
+	margin: 1vh auto;
 	border: 1px solid black;
 	display: grid;
 	grid-auto-flow: column;
 	justify-items: center;
 }
 
+.instructions-button {
+	display: block;
+	margin: 1vh auto;
+}
+
+.game-board-container, .game-board {
+	max-width: 100vw;
+	max-height: 100vw;
+	width: 60vh;
+	height: 60vh;
+}
+
 .game-board-container {
-	width: 70vh;
-	height: 70vh;
+
 	background: rgb(77, 77, 77);
 	margin: 0 auto;
 	border-radius: 100%;
@@ -24,8 +39,6 @@ h2 {
 }
 
 .game-board {
-	width: 70vh;
-	height: 70vh;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 1fr;
@@ -51,29 +64,57 @@ h2 {
 }
 
 .game-logo {
-	font-size: 3vh;
-	margin: 0.5em;
+	font-size: 5vh;
+	margin-top: 0.5em;
+	margin-bottom: 0;
 }
 
-.difficulty-label {
-	margin-bottom: 2px;
-}
-
-.difficulty-display {
-	height: 2em;
-	width: 2em;
-	background: black;
-	color: red;
-	padding-top: 1em;
-	margin: 0 auto;
-}
-
-.button-container {
-	width: 20vh;
+.info-center {
+	height: 10vh;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 1fr;
-	margin: 0 auto;
+	grid grid-auto-flow: column;
+	padding: 0 2vh;
+}
+
+.game-mode-label {
+	justify-self: left;
+	grid-column: 1 / span 1;
+
+}
+
+.difficulty-label {
+	justify-self: right;
+	grid-column: 2 / span 1;
+}
+
+
+.digital-display {
+	background: black;
+	color: red;
+	padding: 1vh 2vh;
+	display: grid;
+	grid-auto-flow: column;
+	list-style-type: none;
+	grid-column: 1 / span 2;
+	grid-row: 2 / span 1;
+}
+
+.difficulty-level {
+	justify-self: right;
+}
+
+.game-mode {
+	justify-self: left;
+}
+
+.button-container {
+	width: 15vh;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
+	margin: 1vh auto;
 }
 
 .button-container>li {
