corrected info center grid flow typo

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h2 {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 1fr;
-	grid grid-auto-flow: column;
+	grid-auto-flow: column;
 	padding: 0 2vh;
 }
 
