--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ h2 {
 	margin: 1vh auto;
 }
 
-.game-board-container, .game-board {
+.game-board-container,
+.game-board {
 	max-width: 100vw;
 	max-height: 100vw;
 	width: 60vh;
@@ -30,7 +31,6 @@ h2 {
 }
 
 .game-board-container {
-
 	background: rgb(77, 77, 77);
 	margin: 0 auto;
 	border-radius: 100%;
@@ -54,50 +54,68 @@ h2 {
 	background: rgb(77, 77, 77);
 	width: 30vh;
 	height: 30vh;
+	position: absolute;
 	left: 50%;
 	top: 50%;
 	margin-left: -15vh;
 	margin-top: -15vh;
-	position: absolute;
 	border-radius: 100%;
+}
+
+.game-controls {
+	width: 25vh;
+	height: 25vh;
 	text-align: center;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr 1fr 1fr;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -12.5vh;
+	margin-top: -12.5vh;
 }
 
 .game-logo {
 	font-size: 5vh;
-	margin-top: 0.5em;
-	margin-bottom: 0;
+	grid-row: 1;
+	margin: 0;
 }
 
 .info-center {
-	height: 10vh;
+	grid-row: 2;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 1fr;
 	grid-auto-flow: column;
-	padding: 0 2vh;
+	margin: 0;
 }
 
 .game-mode-label {
 	justify-self: left;
 	grid-column: 1 / span 1;
+	margin: 0;
 }
 
 .difficulty-label {
 	justify-self: right;
 	grid-column: 2 / span 1;
+	margin: 0;
 }
 
-
 .digital-display {
+	height: 2.6vh;
+	font-family: 'VT323', monospace;
+	font-size: 2.5vh;
 	background: black;
 	color: red;
-	padding: 1vh 2vh;
+	padding: 0.1vh 0.5vh;
 	display: grid;
 	grid-auto-flow: column;
 	list-style-type: none;
 	grid-column: 1 / span 2;
 	grid-row: 2 / span 1;
+	margin: 0;
 }
 
 .difficulty-level {
@@ -111,18 +129,19 @@ h2 {
 .button-container {
 	width: 15vh;
 	display: grid;
+	grid-row: 3;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 1fr;
-	margin: 1vh auto;
+	margin: 0 auto;
 }
 
-.button-container>li {
+.button-container > li {
 	list-style-type: none;
 	background: yellow;
 	box-shadow: inset 0 0 3vh rgb(104, 93, 0);
 	border-radius: 10%;
-	margin: .5vh;
-	padding: .25vh;
+	margin: 0.5vh;
+	padding: 0.25vh;
 }
 
 .green {
